--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Particles</title>
-</head>
-<body>
-	<!-- 背景div -->
-	<div id="mydiv" style="width: 500px;height:500px;"></div>
-	<script type="text/javascript">
-		window.onload = function() {
-		    //配置
-		    var config = {
-		        vx: 4,	//小球x轴速度,正为右，负为左
-		        vy: 4,	//小球y轴速度
-		        height: 2,	//小球高宽，其实为正方形，所以不宜太大
-		        width: 2,
-		        count: 100,		//点个数
-		        color: "121, 162, 185", 	//点颜色
-		        stroke: "130,255,255", 		//线条颜色
-		        dist: 6000, 	//点吸附距离
-		        e_dist: 20000, 	//鼠标吸附加速距离
-		        max_conn: 10 	//点到点最大连接数
-		    }
 
-		    //调用
-		    CanvasParticle(config);
-		}
-	</script>
-	<script type="text/javascript" src="canvas-particle.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <style>
+    html,
+    body {
+      width: 100%;
+      height: 100%;
+      padding: 0;
+      margin: 0;
+      overflow: hidden;
+      background: rgba(255, 247, 240,1);
+    }
+
+    #mycanvas {
+      width: 100vw;
+      height: 100vh;
+    }
+  </style>
+  <script src="./static/js/actions.js"></script>
+</head>
+
+<body>
+  <canvas id="mycanvas"></canvas>
+  <img id="tulip" src="./static/imgs/heart.png" alt="heart">
 </body>
+<script src="./static/js/minify.js"></script>
 </html>
